--- a/examples/notebooks/prithvi_rapid_mtbs_data_creation.ipynb
+++ b/examples/notebooks/prithvi_rapid_mtbs_data_creation.ipynb
@@ -1244,7 +1244,8 @@
     "    pre_coll = hlsl30.filterDate(pre_start, pre_end)\n",
     "    post1_coll = hlsl30.filterDate(post1_start, post1_end)\n",
     "    post2_coll = hlsl30.filterDate(post2_start, post2_end)\n",
-    "\n",
+    "    \n",
+    "    # HERE: want to probably crop to a bbox of fire boundary\n",
     "    pre_comp = pre_coll.median()\n",
     "    post1_comp = post1_coll.median()\n",
     "    post2_comp = post2_coll.median()\n",
@@ -1261,7 +1262,7 @@
     "    severity_img = mtbs_bs.filter(ee.Filter.calendarRange(year, year, 'year')).first()\n",
     "    label_img = (severity_img.eq(3) # label img is binary: high-severity(1), non-high severity (0)\n",
     "        .updateMask(ee.Image().paint(feat.geometry(),1))\n",
-    "        .rename('label'))\n",
+    "        .rename('label')) # HERE: unmask(0)\n",
     "    return ee.Image(label_img).copyProperties(feat)\n",
     "\n",
     "def prep_data(feat):\n",
@@ -1442,8 +1443,9 @@
    ],
    "source": [
     "test_data_export = test_data.toList(test_data.size())\n",
+    "train_val_data_export = train_val_data.toList(train_val_data.size())\n",
     "\n",
-    "for i in list(range(test_data_export.size().getInfo())):\n",
+    "for i in list(range(test_data_export.size().getInfo())): # replace with train_val_data_export to export train_val imgs\n",
     "    image = ee.Image(test_data_export.get(i))\n",
     "    ee.batch.Export.image.toAsset(**{\n",
     "    'image': image,\n",
