visualize tiny covering grid on negative buffered smallest fire

--- a/examples/notebooks/prithvi_rapid_mtbs_data_creation.ipynb
+++ b/examples/notebooks/prithvi_rapid_mtbs_data_creation.ipynb
@@ -1469,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -1536,7 +1536,7 @@
        "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
        "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
        "            &lt;style&gt;\n",
-       "                #map_821eb88618f17c2c23412a1ddf9b162f {\n",
+       "                #map_a74318b3597fe307cc4586d673badeb3 {\n",
        "                    position: relative;\n",
        "                    width: 100.0%;\n",
        "                    height: 100.0%;\n",
@@ -1556,14 +1556,14 @@
        "&lt;body&gt;\n",
        "    \n",
        "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_821eb88618f17c2c23412a1ddf9b162f&quot; &gt;&lt;/div&gt;\n",
+       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_a74318b3597fe307cc4586d673badeb3&quot; &gt;&lt;/div&gt;\n",
        "        \n",
        "&lt;/body&gt;\n",
        "&lt;script&gt;\n",
        "    \n",
        "    \n",
-       "            var map_821eb88618f17c2c23412a1ddf9b162f = L.map(\n",
-       "                &quot;map_821eb88618f17c2c23412a1ddf9b162f&quot;,\n",
+       "            var map_a74318b3597fe307cc4586d673badeb3 = L.map(\n",
+       "                &quot;map_a74318b3597fe307cc4586d673badeb3&quot;,\n",
        "                {\n",
        "                    center: [20.0, 0.0],\n",
        "                    crs: L.CRS.EPSG3857,\n",
@@ -1587,18 +1587,18 @@
        "\n",
        "        \n",
        "    \n",
-       "            var tile_layer_88831cbe0be5a2d965696455b652b321 = L.tileLayer(\n",
+       "            var tile_layer_fcf39c4ff3ce170b2a145a3fdcf045fc = L.tileLayer(\n",
        "                &quot;https://tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
        "                {&quot;attribution&quot;: &quot;\\u0026copy; \\u003ca href=\\&quot;https://www.openstreetmap.org/copyright\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e contributors&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 19, &quot;maxZoom&quot;: 30, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_88831cbe0be5a2d965696455b652b321.addTo(map_821eb88618f17c2c23412a1ddf9b162f);\n",
+       "            tile_layer_fcf39c4ff3ce170b2a145a3fdcf045fc.addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
        "        \n",
        "    \n",
        "            L.control.fullscreen(\n",
        "                {&quot;forceSeparateButton&quot;: false, &quot;position&quot;: &quot;topleft&quot;, &quot;title&quot;: &quot;Full Screen&quot;, &quot;titleCancel&quot;: &quot;Exit Full Screen&quot;}\n",
-       "            ).addTo(map_821eb88618f17c2c23412a1ddf9b162f);\n",
+       "            ).addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
        "        \n",
        "    \n",
        "            var options = {\n",
@@ -1607,14 +1607,14 @@
        "              edit: {},\n",
        "            }\n",
        "            // FeatureGroup is to store editable layers.\n",
-       "            var drawnItems_draw_control_0c4324ccd240d3e50cc321763e3271c1 = new L.featureGroup().addTo(\n",
-       "                map_821eb88618f17c2c23412a1ddf9b162f\n",
+       "            var drawnItems_draw_control_29c88dae8dc7d3cb8ca3fc7d07c5086a = new L.featureGroup().addTo(\n",
+       "                map_a74318b3597fe307cc4586d673badeb3\n",
        "            );\n",
-       "            options.edit.featureGroup = drawnItems_draw_control_0c4324ccd240d3e50cc321763e3271c1;\n",
-       "            var draw_control_0c4324ccd240d3e50cc321763e3271c1 = new L.Control.Draw(\n",
+       "            options.edit.featureGroup = drawnItems_draw_control_29c88dae8dc7d3cb8ca3fc7d07c5086a;\n",
+       "            var draw_control_29c88dae8dc7d3cb8ca3fc7d07c5086a = new L.Control.Draw(\n",
        "                options\n",
-       "            ).addTo( map_821eb88618f17c2c23412a1ddf9b162f );\n",
-       "            map_821eb88618f17c2c23412a1ddf9b162f.on(L.Draw.Event.CREATED, function(e) {\n",
+       "            ).addTo( map_a74318b3597fe307cc4586d673badeb3 );\n",
+       "            map_a74318b3597fe307cc4586d673badeb3.on(L.Draw.Event.CREATED, function(e) {\n",
        "                var layer = e.layer,\n",
        "                    type = e.layerType;\n",
        "                var coords = JSON.stringify(layer.toGeoJSON());\n",
@@ -1622,98 +1622,108 @@
        "                    alert(coords);\n",
        "                    console.log(coords);\n",
        "                });\n",
-       "                drawnItems_draw_control_0c4324ccd240d3e50cc321763e3271c1.addLayer(layer);\n",
+       "                drawnItems_draw_control_29c88dae8dc7d3cb8ca3fc7d07c5086a.addLayer(layer);\n",
        "             });\n",
-       "            map_821eb88618f17c2c23412a1ddf9b162f.on(&#x27;draw:created&#x27;, function(e) {\n",
-       "                drawnItems_draw_control_0c4324ccd240d3e50cc321763e3271c1.addLayer(e.layer);\n",
+       "            map_a74318b3597fe307cc4586d673badeb3.on(&#x27;draw:created&#x27;, function(e) {\n",
+       "                drawnItems_draw_control_29c88dae8dc7d3cb8ca3fc7d07c5086a.addLayer(e.layer);\n",
        "            });\n",
        "            \n",
        "        \n",
        "    \n",
        "\n",
-       "            var geocoderOpts_geocoder_47771f589bb6c47b8a4444f1afc88e9c = {&quot;collapsed&quot;: true, &quot;defaultMarkGeocode&quot;: true, &quot;position&quot;: &quot;topleft&quot;, &quot;provider&quot;: &quot;nominatim&quot;, &quot;providerOptions&quot;: {}, &quot;zoom&quot;: 11};\n",
+       "            var geocoderOpts_geocoder_6779b290c2bc9afdd076afbe10238ca0 = {&quot;collapsed&quot;: true, &quot;defaultMarkGeocode&quot;: true, &quot;position&quot;: &quot;topleft&quot;, &quot;provider&quot;: &quot;nominatim&quot;, &quot;providerOptions&quot;: {}, &quot;zoom&quot;: 11};\n",
        "\n",
        "            // note: geocoder name should start with lowercase\n",
-       "            var geocoderName_geocoder_47771f589bb6c47b8a4444f1afc88e9c = geocoderOpts_geocoder_47771f589bb6c47b8a4444f1afc88e9c[&quot;provider&quot;];\n",
+       "            var geocoderName_geocoder_6779b290c2bc9afdd076afbe10238ca0 = geocoderOpts_geocoder_6779b290c2bc9afdd076afbe10238ca0[&quot;provider&quot;];\n",
        "\n",
-       "            var customGeocoder_geocoder_47771f589bb6c47b8a4444f1afc88e9c = L.Control.Geocoder[ geocoderName_geocoder_47771f589bb6c47b8a4444f1afc88e9c ](\n",
-       "                geocoderOpts_geocoder_47771f589bb6c47b8a4444f1afc88e9c[&#x27;providerOptions&#x27;]\n",
+       "            var customGeocoder_geocoder_6779b290c2bc9afdd076afbe10238ca0 = L.Control.Geocoder[ geocoderName_geocoder_6779b290c2bc9afdd076afbe10238ca0 ](\n",
+       "                geocoderOpts_geocoder_6779b290c2bc9afdd076afbe10238ca0[&#x27;providerOptions&#x27;]\n",
        "            );\n",
-       "            geocoderOpts_geocoder_47771f589bb6c47b8a4444f1afc88e9c[&quot;geocoder&quot;] = customGeocoder_geocoder_47771f589bb6c47b8a4444f1afc88e9c;\n",
+       "            geocoderOpts_geocoder_6779b290c2bc9afdd076afbe10238ca0[&quot;geocoder&quot;] = customGeocoder_geocoder_6779b290c2bc9afdd076afbe10238ca0;\n",
        "\n",
        "            L.Control.geocoder(\n",
-       "                geocoderOpts_geocoder_47771f589bb6c47b8a4444f1afc88e9c\n",
+       "                geocoderOpts_geocoder_6779b290c2bc9afdd076afbe10238ca0\n",
        "            ).on(&#x27;markgeocode&#x27;, function(e) {\n",
-       "                var zoom = geocoderOpts_geocoder_47771f589bb6c47b8a4444f1afc88e9c[&#x27;zoom&#x27;] || map_821eb88618f17c2c23412a1ddf9b162f.getZoom();\n",
-       "                map_821eb88618f17c2c23412a1ddf9b162f.setView(e.geocode.center, zoom);\n",
-       "            }).addTo(map_821eb88618f17c2c23412a1ddf9b162f);\n",
+       "                var zoom = geocoderOpts_geocoder_6779b290c2bc9afdd076afbe10238ca0[&#x27;zoom&#x27;] || map_a74318b3597fe307cc4586d673badeb3.getZoom();\n",
+       "                map_a74318b3597fe307cc4586d673badeb3.setView(e.geocode.center, zoom);\n",
+       "            }).addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
        "\n",
        "        \n",
        "    \n",
-       "            map_821eb88618f17c2c23412a1ddf9b162f.fitBounds(\n",
+       "            map_a74318b3597fe307cc4586d673badeb3.fitBounds(\n",
        "                [[20, 0], [20, 0]],\n",
        "                {&quot;maxZoom&quot;: 2}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            var tile_layer_96017bc16c1e943a7ef9659c11a815f5 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/pyregence-ee/maps/c47cc156c30dd5a6fe8ded123c376eea-c803c375075ce71746686d88f3999513/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_a356132c3265cdfb0513682eeaab412b = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/pyregence-ee/maps/c47cc156c30dd5a6fe8ded123c376eea-f0477e064f1fab31f5f5fcae9e4c9f95/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_96017bc16c1e943a7ef9659c11a815f5.addTo(map_821eb88618f17c2c23412a1ddf9b162f);\n",
+       "            tile_layer_a356132c3265cdfb0513682eeaab412b.addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_e98110b0dec5cb65eb0ca8235c6d0ed4 = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/pyregence-ee/maps/61ac3e57223b7ba3917147dfb17b6719-29688e3d2ce8fd2070714eba515f09dd/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_8647c700191c064fc059c3b50119e2ea = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/pyregence-ee/maps/61ac3e57223b7ba3917147dfb17b6719-7a3e646c9c5a7a4e7ba9493906e365b7/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_e98110b0dec5cb65eb0ca8235c6d0ed4.addTo(map_821eb88618f17c2c23412a1ddf9b162f);\n",
+       "            tile_layer_8647c700191c064fc059c3b50119e2ea.addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
        "        \n",
        "    \n",
-       "            var tile_layer_8736160538f01566e22e9638319d698a = L.tileLayer(\n",
-       "                &quot;https://earthengine.googleapis.com/v1/projects/pyregence-ee/maps/8279ab8982f0842f661c48f4b82fe2fb-8d87df241cef81a9414705bccd6055b4/tiles/{z}/{x}/{y}&quot;,\n",
+       "            var tile_layer_849bc70543c71c93a55a1795fff8f44a = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/pyregence-ee/maps/748990d71b073db1f391e41ad699356d-e22260d3034726f4c9891dd9c3badf77/tiles/{z}/{x}/{y}&quot;,\n",
        "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            tile_layer_8736160538f01566e22e9638319d698a.addTo(map_821eb88618f17c2c23412a1ddf9b162f);\n",
+       "            tile_layer_849bc70543c71c93a55a1795fff8f44a.addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
        "        \n",
        "    \n",
-       "            map_821eb88618f17c2c23412a1ddf9b162f.fitBounds(\n",
+       "            var tile_layer_84e96db92c81d8feafbb20db65045427 = L.tileLayer(\n",
+       "                &quot;https://earthengine.googleapis.com/v1/projects/pyregence-ee/maps/67d675eecca1cc1728e9068778a674d3-24492883f198efb67337992c8c7a15e7/tiles/{z}/{x}/{y}&quot;,\n",
+       "                {&quot;attribution&quot;: &quot;Google Earth Engine&quot;, &quot;detectRetina&quot;: false, &quot;maxZoom&quot;: 24, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1.0, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
+       "            );\n",
+       "        \n",
+       "    \n",
+       "            tile_layer_84e96db92c81d8feafbb20db65045427.addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
+       "        \n",
+       "    \n",
+       "            map_a74318b3597fe307cc4586d673badeb3.fitBounds(\n",
        "                [[37.235086023553336, -119.46736942478339], [37.235086023553336, -119.46736942478339]],\n",
        "                {&quot;maxZoom&quot;: 14}\n",
        "            );\n",
        "        \n",
        "    \n",
-       "            var layer_control_2e2723bb6e9adcfed1d422f439b50aaa_layers = {\n",
+       "            var layer_control_d43ee93d628b118c07b286081c773e11_layers = {\n",
        "                base_layers : {\n",
-       "                    &quot;openstreetmap&quot; : tile_layer_88831cbe0be5a2d965696455b652b321,\n",
+       "                    &quot;openstreetmap&quot; : tile_layer_fcf39c4ff3ce170b2a145a3fdcf045fc,\n",
        "                },\n",
        "                overlays :  {\n",
-       "                    &quot;Original Fire Boundary&quot; : tile_layer_96017bc16c1e943a7ef9659c11a815f5,\n",
-       "                    &quot;Shrunk Fire Boundary&quot; : tile_layer_e98110b0dec5cb65eb0ca8235c6d0ed4,\n",
-       "                    &quot;test grid&quot; : tile_layer_8736160538f01566e22e9638319d698a,\n",
+       "                    &quot;Original Fire Boundary&quot; : tile_layer_a356132c3265cdfb0513682eeaab412b,\n",
+       "                    &quot;Shrunk Fire Boundary&quot; : tile_layer_8647c700191c064fc059c3b50119e2ea,\n",
+       "                    &quot;original grid&quot; : tile_layer_849bc70543c71c93a55a1795fff8f44a,\n",
+       "                    &quot;tiny grid&quot; : tile_layer_84e96db92c81d8feafbb20db65045427,\n",
        "                },\n",
        "            };\n",
-       "            let layer_control_2e2723bb6e9adcfed1d422f439b50aaa = L.control.layers(\n",
-       "                layer_control_2e2723bb6e9adcfed1d422f439b50aaa_layers.base_layers,\n",
-       "                layer_control_2e2723bb6e9adcfed1d422f439b50aaa_layers.overlays,\n",
+       "            let layer_control_d43ee93d628b118c07b286081c773e11 = L.control.layers(\n",
+       "                layer_control_d43ee93d628b118c07b286081c773e11_layers.base_layers,\n",
+       "                layer_control_d43ee93d628b118c07b286081c773e11_layers.overlays,\n",
        "                {&quot;autoZIndex&quot;: true, &quot;collapsed&quot;: true, &quot;position&quot;: &quot;topright&quot;}\n",
-       "            ).addTo(map_821eb88618f17c2c23412a1ddf9b162f);\n",
+       "            ).addTo(map_a74318b3597fe307cc4586d673badeb3);\n",
        "\n",
        "        \n",
        "&lt;/script&gt;\n",
        "&lt;/html&gt;\" width=\"100%\" height=\"600\"style=\"border:none !important;\" \"allowfullscreen\" \"webkitallowfullscreen\" \"mozallowfullscreen\"></iframe>"
       ],
       "text/plain": [
-       "<geemap.foliumap.Map at 0x754fceeebdd0>"
+       "<geemap.foliumap.Map at 0x754fcf66a910>"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,12 +1733,14 @@
     "fire_geo = sierra_fires.sort('BurnBndAc').first().geometry()\n",
     "buffer_distance = -16*30\n",
     "shrunk_fire_geo = fire_geo.buffer(distance=buffer_distance)\n",
-    "tiny_grid = fire_geo.coveringGrid(scale=256*30, proj='EPSG:5070')  \n",
+    "og_grid = fire_geo.coveringGrid(scale=256*30, proj='EPSG:5070')\n",
+    "tiny_grid = shrunk_fire_geo.coveringGrid(scale=256*30, proj='EPSG:5070')  \n",
     "m = geemap.Map()\n",
     "m.addLayer(fire_geo, {'color': 'blue'}, 'Original Fire Boundary')\n",
     "m.addLayer(shrunk_fire_geo, {'color': 'red'}, 'Shrunk Fire Boundary')\n",
-    "m.addLayer(ee.Feature(tiny_grid),{},'test grid') # grid does not show up\n",
-    "m.centerObject(fire_geo, 14)\n",
+    "m.addLayer(og_grid,{'color': 'black'},'original grid')\n",
+    "m.addLayer(tiny_grid,{'color': 'black'},'tiny grid') \n",
+    "m.centerObject(fire_geo, 12)\n",
     "m"
    ]
   },
