added JS for going to centroid lat,lon,image source

--- a/examples/notebooks/prithvi_rapid_mtbs_data_creation.ipynb
+++ b/examples/notebooks/prithvi_rapid_mtbs_data_creation.ipynb
@@ -2594,6 +2594,52 @@
     "m.addLayer(ee.Feature(test_centroid),{},'centroids')\n",
     "m\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "function gridMatch(grid){\n",
+    "  var eventId = grid.get('Event_ID')\n",
+    "  var imageMatch = test_composites.filterMetadata('Event_ID','equals',eventId).first()\n",
+    "  var imageId = imageMatch.get('system:id')\n",
+    "  return grid.set('source',imageId)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var test = gridMatch(test_grids.first())\n",
+    "print(test)\n",
+    "\n",
+    "var test_grid_images = test_grids.map(gridMatch)\n",
+    "print(test_grid_images)\n",
+    "print(test_grid_images.aggregate_array('source'))\n",
+    "\n",
+    "function toCentroids(feat){\n",
+    "  var centroid = feat.geometry().centroid()\n",
+    "  var lat = centroid.coordinates().get(1)\n",
+    "  var lon = centroid.coordinates().get(0)\n",
+    "  return ee.Feature(centroid).set('lat',lat,'lon',lon)\n",
+    "}\n",
+    "\n",
+    "var test_centroid_images = toCentroids(test_grid_images.first())\n",
+    "print(test_centroid_images)\n",
+    "\n",
+    "var centroids_images = test_grid_images.map(toCentroids)\n",
+    "\n",
+    "Export.table.toDrive(centroids_images, \n",
+    "'test_grids_images', \n",
+    "'baygeo', \n",
+    "'test_grids_images', \n",
+    "'CSV', \n",
+    "['lon','lat','source'])"
+   ]
   }
  ],
  "metadata": {
